# bazel-toolchains-cloudabi

./: BUILD.bazel  BUILD.cfe  BUILD.compiler-rt  BUILD.jemalloc  BUILD.libcxx  BUILD.libcxxabi  BUILD.libunwind  BUILD.llvm  CROSSTOOL  LICENSE  README.md  WORKSPACE  cc.bzl  run_test.c  toolchains.bzl
library_stubs/: BUILD.bazel
patches/: double-conversion-pull-54.diff  jemalloc-cloudabi.diff  jemalloc-generated.diff  libcxx-no-std-funcs.diff  libcxx-unsafe-string-includes.diff  musl-bazel.diff  musl-cloudabi.diff  musl-warnings.diff
wrappers/: clang  llvm-ar
