cc_toolchain_suite(
    name = "toolchain",
    toolchains = {
        "x86_64-unknown-cloudabi|clang": ":cc-compiler-x86_64-unknown-cloudabi",
        "darwin|clang": "cc-compiler-x86_64-apple-darwin",
        "freebsd|clang": "cc-compiler-x86_64-unknown-freebsd",
    },
    visibility = ["//visibility:public"],
)

filegroup(name = "empty")

filegroup(
    name = "compiler_files",
    srcs = [
        ":wrappers/clang",
        "@org_cloudabi_cloudlibc_x86_64_unknown_cloudabi//:include",
        "@org_llvm_libcxx_x86_64_unknown_cloudabi//:include",
        "@org_llvm_llvm_x86_64_apple_darwin//:bin/clang-7",
        "@org_llvm_llvm_x86_64_apple_darwin//:clang_headers",
    ],
)

filegroup(
    name = "linker_files",
    srcs = [
        ":wrappers/clang",
        ":wrappers/llvm-ar",
        "@org_cloudabi_cloudlibc_x86_64_unknown_cloudabi//:lib",
        "@org_llvm_compiler_rt_x86_64_unknown_cloudabi//:lib",
        "@org_llvm_libcxx_x86_64_unknown_cloudabi//:lib",
        "@org_llvm_libcxxabi_x86_64_unknown_cloudabi//:lib",
        "@org_llvm_libunwind_x86_64_unknown_cloudabi//:lib",
        "@org_llvm_llvm_x86_64_apple_darwin//:bin/clang-7",
        "@org_llvm_llvm_x86_64_apple_darwin//:bin/lld",
        "@org_llvm_llvm_x86_64_apple_darwin//:bin/llvm-ar",
    ],
)

cc_toolchain(
    name = "cc-compiler-x86_64-unknown-cloudabi",
    all_files = ":compiler_files",
    compiler_files = ":compiler_files",
    cpu = "x86_64-unknown-cloudabi",
    dwp_files = ":empty",
    dynamic_runtime_libs = [":empty"],
    linker_files = ":linker_files",
    objcopy_files = ":empty",
    static_runtime_libs = [":empty"],
    strip_files = ":empty",
    supports_param_files = 0,
    toolchain_identifier = "x86_64-unknown-cloudabi",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "cc-toolchain-x86_64-unknown-cloudabi",
    toolchain = ":cc-compiler-x86_64-unknown-cloudabi",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

# TODO(ed): Why do we need to declare this here? Can't Bazel be
# configured to register our toolchains in addition to the ones it knows
# by default?
cc_toolchain(
    name = "cc-compiler-x86_64-apple-darwin",
    all_files = ":empty",
    compiler_files = ":empty",
    cpu = "x86_64-apple-darwin",
    dwp_files = ":empty",
    dynamic_runtime_libs = [":empty"],
    linker_files = ":empty",
    objcopy_files = ":empty",
    static_runtime_libs = [":empty"],
    strip_files = ":empty",
    supports_param_files = 0,
    toolchain_identifier = "x86_64-apple-darwin",
    visibility = ["//visibility:public"],
)

cc_toolchain(
    name = "cc-compiler-x86_64-unknown-freebsd",
    all_files = ":empty",
    compiler_files = ":empty",
    cpu = "x86_64-unknown-freebsd",
    dwp_files = ":empty",
    dynamic_runtime_libs = [":empty"],
    linker_files = ":empty",
    objcopy_files = ":empty",
    static_runtime_libs = [":empty"],
    strip_files = ":empty",
    supports_param_files = 0,
    toolchain_identifier = "x86_64-unknown-freebsd",
    visibility = ["//visibility:public"],
)
